--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 eveniet nulla rerum labore. Nisi expedita ipsum distinctio deserunt obcaecati culpa.</div>
             <div class="block">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos modi incidunt assumenda
                 maxime
-                laboriosam debitis earum molestiae aliquid temporibus expedita in culpa numquam obcaecati officia at
+                laboriosam debitis eartiae aliquid temporibus expedita in culpa numquam obcaecati officia at
                 eaque,
                 praesentium doloribus delectus ipsa saepe accusantium beatae eveniet! Quibusdam, ratione? Quaerat sed
                 eveniet nulla rerum labore. Nisi expedita ipsum distinctio deserunt obcaecati culpa.</div>
